--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,9 @@
 {
 	"tabWidth": 2,
 	"useTabs": true,
-	"printWidth": 80,
+	"printWidth": 120,
 	"semi": true,
 	"trailingComma": "es5",
-	"singleQuote": true
+	"singleQuote": true,
+	"endOfLine": "auto"
 }
